--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,9 @@
       android:id="@+id/next_button"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:src="@drawable/arrow_right"/>
+      android:text="@string/next_button"
+      android:drawableRight="@mipmap/arrow_right"
+      android:drawablePadding="4dp"/>
 
     <Button
       android:id="@+id/true_button"
