Fixed errors and added strings.

--- a/app/src/main/res/layout/activity_cheat.xml
+++ b/app/src/main/res/layout/activity_cheat.xml
@@ -1,20 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-  xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:app="http://schemas.android.com/apk/res-auto"
-  xmlns:tools="http://schemas.android.com/tools"
-  android:layout_width="match_parent"
-  android:layout_height="match_parent"
-  tools:context=".CheatActivity">
-
-  <LinearLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    tools:context="com.bignerdranch.android.geoquiz.CheatActivity">
+    tools:context="edu.cnm.deepdive.geoquiz.CheatActivity">
 
     <TextView
       android:layout_width="wrap_content"
@@ -38,4 +30,3 @@
       android:text="@string/show_answer_button"/>
 
   </LinearLayout>
-</android.support.constraint.ConstraintLayout>
