--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
   <LinearLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"/>
+    android:orientation="horizontal">
 
 
   <Button
@@ -27,6 +27,14 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/false_button"/>
+</LinearLayout>
+
+  <Button
+    android:id="@+id/cheat_button"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="@string/correct_toast"/>
+
   <Button
     android:id="@+id/next_button"
     android:layout_width="wrap_content"
@@ -34,6 +42,7 @@
     android:text="@string/next_button"
     android:drawableRight="@mipmap/arrow_right"
     android:drawablePadding="4dp"/>
+
 
 
 </LinearLayout>
